# dunai-bayes

./: SMC2 Notes.md  dunai-bayes.cabal  shell.nix  todo.txt
app/: Main.hs
src/Data/MonadicStreamFunction/: Bayes.hs
